--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,4 @@ authors = ["Juan Ibiapina <juanibiapina@gmail.com>"]
 [dependencies]
 x11 = { version = "*", features = ["xlib"] }
 libc = "*"
+bitflags = "*"
