--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,5 @@ authors = ["Juan Ibiapina <juanibiapina@gmail.com>"]
 x11 = { version = "*", features = ["xlib"] }
 libc = "*"
 bitflags = "*"
+log = "*"
+env_logger = "*"
