--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "winmux"
 version = "0.1.0"
 authors = ["Juan Ibiapina <juanibiapina@gmail.com>"]
+edition = "2018"
 
 [dependencies]
 x11 = { version = "*", features = ["xlib"] }
